--- a/.xmonad/README.org
+++ b/.xmonad/README.org
@@ -176,12 +176,12 @@ myStartupHook = do
           spawnOnce "lxsession &"
           spawnOnce "nitrogen --restore &"
           spawnOnce "picom --config $HOME/.config/picom/picom.conf &"
-          spawnOnce "redshift-gtk -t 6500:3000"
+          spawnOnce "redshift-gtk -t 6300:3000"
           spawnOnce "nm-applet &"
           spawnOnce "volumeicon &"
           spawnOnce "trayer --edge top --align right --widthtype request --padding 6 --SetDockType true --SetPartialStrut true --expand true --monitor 1 --transparent true --alpha 0 --tint 0x282c34  --height 22 &"
           spawnOnce "/usr/bin/emacs --daemon &"
-          spawnOnce "setxkbmap --option caps:escape &"
+          spawnOnce "setxkbmap --option caps:escape"
           spawnOnce "firewalld &"
           setWMName "LG3D"
 #+END_SRC
