--- a/.xmonad/README.org
+++ b/.xmonad/README.org
@@ -174,11 +174,11 @@ These are commands we want XMonad to execute on startup, such as running a compo
 myStartupHook :: X ()
 myStartupHook = do
           spawnOnce "lxsession &"
+          spawnOnce "dunst &"
           spawnOnce "nitrogen --restore &"
           spawnOnce "picom --config $HOME/.config/picom/picom.conf &"
           spawnOnce "redshift-gtk -t 6300:3000 &"
           spawnOnce "nm-applet &"
-          spawnOnce "volumeicon &"
           spawnOnce "trayer --edge top --align right --widthtype request --padding 3 --SetDockType true --SetPartialStrut true --expand true --monitor 1 --transparent true --alpha 0 --tint 0x282c34  --height 24 &"
           spawnOnce "/usr/bin/emacs --daemon &"
           spawnOnce "firewalld &"
@@ -985,9 +985,9 @@ myKeys =
         , ("<XF86AudioPlay>", spawn (myTerminal ++ "mocp --play"))
         , ("<XF86AudioPrev>", spawn (myTerminal ++ "mocp --previous"))
         , ("<XF86AudioNext>", spawn (myTerminal ++ "mocp --next"))
-        -- , ("<XF86AudioMute>",   spawn "amixer set Master toggle")  -- Bug prevents it from toggling correctly in 12.04.
-        , ("<XF86AudioLowerVolume>", spawn "amixer set Master 5%- unmute")
-        , ("<XF86AudioRaiseVolume>", spawn "amixer set Master 5%+ unmute")
+        , ("<XF86AudioMute>",   spawn "sh $HOME/.local/bin/volumeControl mute")  -- Bug prevents it from toggling correctly in 12.04.
+        , ("<XF86AudioLowerVolume>", spawn "sh $HOME/.local/bin/volumeControl down")
+        , ("<XF86AudioRaiseVolume>", spawn "sh $HOME/.local/bin/volumeControl up")
         , ("<XF86HomePage>", spawn "brave")
         , ("<XF86Search>", safeSpawn "brave" ["https://www.duckduckgo.com/"])
         , ("<XF86Mail>", runOrRaise "geary" (resource =? "thunderbird"))
