--- a/.config/xmonad/README.org
+++ b/.config/xmonad/README.org
@@ -1,3 +1,57 @@
+#+TITLE: XMonad Config
+#+PROPERTY: header-args :tangle xmonad.hs
+#+STARTUP: overview
+
+* Table Of Contents :toc:noexport:
+- [[#about-this-config][About This Config]]
+  - [[#notes][Notes]]
+  - [[#todo][TODO]]
+- [[#imports][Imports]]
+- [[#variables][Variables]]
+- [[#autostart][Autostart]]
+- [[#gridselect][Gridselect]]
+- [[#treeselect][Treeselect]]
+  - [[#treeselect-menu-entries][Treeselect Menu Entries]]
+  - [[#treeselect-settings][Treeselect Settings]]
+- [[#xprompts][Xprompts]]
+  - [[#xprompt-settings][Xprompt Settings]]
+  - [[#custom-prompts][Custom Prompts]]
+  - [[#xprompt-keymap][Xprompt Keymap]]
+  - [[#search-engines][Search Engines]]
+- [[#scratchpads][Scratchpads]]
+- [[#layouts][Layouts]]
+- [[#workspaces][Workspaces]]
+  - [[#standard-non-clickable-workspaces][Standard Non-Clickable Workspaces]]
+  - [[#clickable-workspaces][Clickable Workspaces]]
+- [[#managehook][Managehook]]
+- [[#loghook][Loghook]]
+- [[#keybindings][Keybindings]]
+- [[#main][Main]]
+
+* About This Config
+#+CAPTION: XMonad Scrot
+#+ATTR_HTML: :alt XMonad Scrot :title XMonad Scrot :align left
+[[https://gitlab.com/dwt1/dotfiles/-/raw/master/.screenshots/dotfiles05-thumb.png]]
+
+Xmonad is a dynamically tiling X11 window manager that is written and configured in Haskell.
+- XMonad Official Website: [[https://xmonad.org][https://xmonad.org]]
+
+This is my personal config of xmonad that I based off Distrotube's config and my previous AwesomeWM config. I have since added some new functionality and changes all of my prompts and workspaces to be what I want.
+** Notes
+- After an upgrade to any Haskell module, Xmonad must be recompiled. M-C-r will do this for you
+- SpawnOnce will cause weirdness with logging out and back in. Be careful with caps lock to escape
+- C-t and C-g will cause some problems with apps as these are bound to grid and tree select menus.
+
+** TODO
+- Fix tree and grid select menus
+- Add M1-TAB and M1-S-TAB functionality in one form or another
+- Fix icons in xmobar
+- Redo how fonts are configured
+
+* Imports
+These are Haskell modules that we must import so that we can use their functions later in the config.
+
+#+BEGIN_SRC haskell
   -- Base
 import XMonad
 import System.IO (hPutStrLn)
@@ -74,7 +128,12 @@ import XMonad.Util.EZConfig (additionalKeysP)
 import XMonad.Util.NamedScratchpad
 import XMonad.Util.Run (runProcessWithInput, safeSpawn, spawnPipe)
 import XMonad.Util.SpawnOnce
+#+END_SRC
 
+* Variables
+It's nice to assign values to stuff that you will use more than once in the config. Setting values for things like font, terminal and editor means you only have to change the value here to make changes globally.
+
+#+BEGIN_SRC haskell
 myFont :: String
 myFont = "xft:JetBrains Nerd Font:bold:size=9:antialias=true:hinting=true"
 
@@ -106,7 +165,12 @@ altMask = mod1Mask         -- Setting this for use in xprompts
 
 windowCount :: X (Maybe String)
 windowCount = gets $ Just . show . length . W.integrate' . W.stack . W.workspace . W.current . windowset
+#+END_SRC
 
+* Autostart
+These are commands we want XMonad to execute on startup, such as running a compositor, setting our wallpaper, starting the emacs daemon, and starting our system tray and the applications that belong in it.
+
+#+BEGIN_SRC haskell
 myStartupHook :: X ()
 myStartupHook = do
           spawnOnce "lxsession &"
@@ -115,12 +179,17 @@ myStartupHook = do
           spawnOnce "picom --experimental-backend &"
           spawnOnce "redshift-gtk -t 4500:3000 &"
           spawnOnce "nm-applet &"
-          spawnOnce "trayer --edge top --align right --widthtype request --padding 3 --SetDockType true --SetPartialStrut true --expand true --monitor 1 --transparent true --alpha 0 --tint 0x282c34  --height 24 &"
+          spawnOnce "trayer --edge top --align right --widthtype request --padding 3 --SetDockType true --SetPartialStrut true --expand true --monitor 1 --transparent true --alpha 0 --tint 0x282c34  --height 22 &"
           spawnOnce "/usr/bin/emacs --daemon &"
-          spawnOnce "firewalld &"
+          spawnOnce "light-locker &"
           setWMName "LG3D"
           spawnOnce "setxkbmap --option caps:escape"
+#+END_SRC
 
+* Gridselect
+GridSelect displays items (programs, open windows, etc.) in a 2D grid and lets the user select from it with the cursor/hjkl keys or the mouse.
+
+#+BEGIN_SRC haskell
 myColorizer :: Window -> Bool -> X (String, String)
 myColorizer = colorRangeFromClassName
                   (0x28,0x2c,0x34) -- lowest inactive bg
@@ -164,8 +233,16 @@ myAppGrid = [ ("Blender", "blender")
                  , ("VLC", "vlc")
                  , ("Update", (myTerminal ++ "-e yay -Syu"))
                  , ("Terminal", myTerminal)
+                 , ("Nitrogen", "nitrogen")
+                 , ("HTop", (myTerminal ++ " -e htop"))
                  ]
+#+END_SRC
 
+* Treeselect
+TreeSelect displays your workspaces or actions in a Tree-like format. You can select desired workspace/action with the cursor or hjkl keys. My TreeSelect menu is rather large and includes a mixture of applications, web bookmarks, configuration files and xmonad actions.
+
+** Treeselect Menu Entries
+#+BEGIN_SRC haskell
 treeselectAction :: TS.TSConfig (X ()) -> X ()
 treeselectAction a = TS.treeselectAction a
    [ Node (TS.TSNode "+ Accessories" "Accessory applications" (return ()))
@@ -367,7 +444,12 @@ treeselectAction a = TS.treeselectAction a
        , Node (TS.TSNode "Quit" "Restart XMonad" (io exitSuccess)) []
        ]
    ]
+  #+END_SRC
 
+** Treeselect Settings
+Configuration options for the treeSelect menus. Keybindings for treeSelect menus. Use h-j-k-l to navigate. Use 'o' and 'i' to move forward/back in the workspace history. Single KEY's are for top-level nodes. SUPER+KEY are for the second-level nodes. SUPER+ALT+KEY are third-level nodes.
+
+  #+BEGIN_SRC haskell
 tsDefaultConfig :: TS.TSConfig a
 tsDefaultConfig = TS.TSConfig { TS.ts_hidechildren = True
                               , TS.ts_background   = 0xdd282c34
@@ -417,7 +499,12 @@ myTreeNavigation = M.fromList
     , ((mod4Mask .|. altMask, xK_n), TS.moveTo ["+ Bookmarks", "+ Linux", "+ Linux News"])
     , ((mod4Mask .|. altMask, xK_w), TS.moveTo ["+ Bookmarks", "+ Linux", "+ Window Managers"])
     ]
+#+END_SRC
 
+* Xprompts
+** Xprompt Settings
+
+#+BEGIN_SRC haskell
 dtXPConfig :: XPConfig
 dtXPConfig = def
       { font                = myFont
@@ -467,14 +554,24 @@ promptList = [ ("m", manPrompt)          -- manpages prompt
 promptList' :: [(String, XPConfig -> String -> X (), String)]
 promptList' = [ ("c", calcPrompt, "qalc")         -- requires qalculate-gtk
               ]
+#+END_SRC
 
+** Custom Prompts
+calcPrompt requires a cli calculator called qalcualte-gtk. You could use this as a template for other custom prompts that use command line programs that return a single line of output.
+
+#+BEGIN_SRC haskell
 calcPrompt c ans =
     inputPrompt c (trim ans) ?+ \input ->
         liftIO(runProcessWithInput "qalc" [input] "") >>= calcPrompt c
     where
         trim  = f . f
             where f = reverse . dropWhile isSpace
+#+END_SRC
 
+** Xprompt Keymap
+Emacs-like key bindings for xprompts.
+
+#+BEGIN_SRC haskell
 dtXPKeymap :: M.Map (KeyMask,KeySym) (XP ())
 dtXPKeymap = M.fromList $
      map (first $ (,) controlMask)   -- control + <key>
@@ -513,7 +610,12 @@ dtXPKeymap = M.fromList $
      , (xK_Up, moveHistory W.focusDown')
      , (xK_Escape, quit)
      ]
+#+END_SRC
 
+** Search Engines
+Xmonad has several search engines available to use located in XMonad.Actions.Search. Additionally, you can add other search engines such as those listed below.
+
+#+BEGIN_SRC haskell
 archwiki, ebay, news, stackOverflow :: S.SearchEngine
 
 archwiki = S.searchEngine "archwiki" "https://wiki.archlinux.org/index.php?search="
@@ -540,7 +642,12 @@ searchList = [ ("a", archwiki)
              , ("y", S.youtube)
              , ("z", S.amazon)
              ]
+#+END_SRC
 
+* Scratchpads
+Allows to have several floating scratchpads running different applications. Import Util.NamedScratchpad. Bind a key to namedScratchpadSpawnAction.
+
+#+BEGIN_SRC haskell
 myScratchPads :: [NamedScratchpad]
 myScratchPads = [ NS "terminal" spawnTerm findTerm manageTerm
                 , NS "mocp" spawnMocp findMocp manageMocp
@@ -562,7 +669,12 @@ myScratchPads = [ NS "terminal" spawnTerm findTerm manageTerm
                  w = 0.9
                  t = 0.95 -h
                  l = 0.95 -w
+#+END_SRC
 
+* Layouts
+Makes setting the spacingRaw simpler to write. The spacingRaw module adds a configurable amount of space around windows.
+
+#+BEGIN_SRC haskell
 mySpacing :: Integer -> l a -> XMonad.Layout.LayoutModifier.ModifiedLayout Spacing l a
 mySpacing i = spacingRaw False (Border i i i i) True (Border i i i i) True
 
@@ -665,10 +777,23 @@ myLayoutHook = avoidStruts $ mouseResize $ windowArrange $ T.toggleLayouts float
                                  ||| spirals
                                  ||| threeCol
                                  ||| threeRow
+#+END_SRC
 
+* Workspaces
+I include two options for workspace: (1) Standard non-clickable workspaces, and (2) clickable workspaces. Choose one.
+
+** Standard Non-Clickable Workspaces
+These workspaces do not accept mouse clicks for changing workspaces. You must use the keybindings (which you probably should be doing anyway). To use standard non-clickable workspaces, be sure have 'workspaces = myWorkspaces' in the main at the bottom of this config.
+
+#+begin_src haskell
 -- myWorkspaces = [" dev ", " www ", " sys ", " doc ", " vbox ", " chat ", " mus ", " vid ", " gfx "]
 myWorkspaces = [" 1 ", " 2 ", " 3 ", " 4 ", " 5 ", " 6 ", " 7 ", " 8 ", " 9 "]
+#+end_src
 
+** Clickable Workspaces
+Clickable workspaces means the mouse can be used to switch workspaces. This requires /xdotool/ to be installed. You need to use UnsafeStdInReader instead of simply StdInReader in your xmobar config so you can pass actions to it. Finally, to use clickable workspaces, be sure have 'workspaces = myClickableWorkspaces' in the main at the bottom of this config.
+
+#+BEGIN_SRC haskell
 xmobarEscape :: String -> String
 xmobarEscape = concatMap doubleLts
   where
@@ -683,7 +808,12 @@ myClickableWorkspaces = clickable . (map xmobarEscape)
         clickable l = [ "<action=xdotool key super+" ++ show (n) ++ ">" ++ ws ++ "</action>" |
                       (i,ws) <- zip [1..9] l,
                       let n = i ]
+#+END_SRC
 
+* Managehook
+Sets some rules for certain programs. Examples include forcing certain programs to always float, or to always appear on a certain workspace. Forcing programs to a certain workspace with a doShift requires xdotool if you are using clickable workspaces. You need the className or title of the program. Use xprop to get this info. Make sure to use name of current workspace set for hooks (myClickableWorkspaces or myWorkspaces).
+
+#+BEGIN_SRC haskell
 myManageHook :: XMonad.Query (Data.Monoid.Endo WindowSet)
 myManageHook = composeAll
      -- using 'doShift ( myWorkspaces !! 7)' sends program to workspace 8!
@@ -698,11 +828,50 @@ myManageHook = composeAll
      , className =? "Blender"      --> doShift ( myClickableWorkspaces !! 5 )
      , (className =? "firefox" <&&> resource =? "Dialog") --> doFloat  -- Float Firefox Dialog
      ] <+> namedScratchpadManageHook myScratchPads
+#+END_SRC
 
+* Loghook
+Sets opacity for inactive (unfocused) windows. I prefer to not use this feature so I've set opacity to 1.0. If you want opacity, set this to a value of less than 1 (such as 0.9 for 90% opacity).
+
+#+BEGIN_SRC haskell
 myLogHook :: X ()
 myLogHook = fadeInactiveLogHook fadeAmount
     where fadeAmount = 1.0
+#+END_SRC
 
+* Keybindings
+I am using the Xmonad.Util.EZConfig module which allows keybindings to be written in simpler, emacs-like format. The Super/Windows key is 'M' (the modkey). The ALT key is 'M1'. SHIFT is 'S' and CTR is 'C'.
+
+| A FEW IMPORTANT KEYBINDINGS | ASSOCIATED ACTION                                                    |
+|-----------------------------+----------------------------------------------------------------------|
+| MODKEY + RETURN             | opens terminal (alacritty is the terminal but can be easily changed) |
+| MODKEY + SHIFT + RETURN     | opens run launcher (XMonad's shell xprompt)                          |
+| MODKEY + ALTKEY + b         | opens browser (firefox is the browser but can be easily changed)     |
+| MODKEY + ALTKEY + e         | opens editor (emacs client is editor but can be easily changed)      |
+| MODKEY + ALTKEY + f         | opens file manager                                                   |
+| MODKEY + ALTKEY + v         | opens virtual machine controller                                     |
+| MODKEY + ALTKEY + g         | opens gimp                                                           |
+| MODKEY + ALTKEY + l         | opens blender                                                        |
+| MODKEY + TAB                | rotates through the available layouts                                |
+| MODKEY + SHIFT + c          | closes window with focus                                             |
+| MODKEY + SHIFT + r          | restarts xmonad                                                      |
+| MODKEY + SHIFT + q          | quits xmonad                                                         |
+| MODKEY + SHIFT + l          | locks screen                                                         |
+| MODKEY + 1-9                | switch focus to workspace (1-9)                                      |
+| MODKEY + SHIFT + 1-9        | send focused window to workspace (1-9)                               |
+| MODKEY + j                  | windows focus down (switches focus between windows in the stack)     |
+| MODKEY + k                  | windows focus up (switches focus between windows in the stack)       |
+| MODKEY + SHIFT + j          | windows swap down (swap windows in the stack)                        |
+| MODKEY + SHIFT + k          | windows swap up (swap the windows in the stack)                      |
+| MODKEY + h                  | shrink window (decreases window width)                               |
+| MODKEY + l                  | expand window (increases window width)                               |
+| MODKEY + w                  | switches focus to monitor 1                                          |
+| MODKEY + e                  | switches focus to monitor 2                                          |
+| MODKEY + r                  | switches focus to monitor 3                                          |
+| MODKEY + period             | switch focus to next monitor                                         |
+| MODKEY + comma              | switch focus to prev monitor                                         |
+
+#+BEGIN_SRC haskell
 myKeys :: [(String, X ())]
 myKeys =
     -- Xmonad
@@ -839,7 +1008,12 @@ myKeys =
     -- The following lines are needed for named scratchpads.
           where nonNSP          = WSIs (return (\ws -> W.tag ws /= "nsp"))
                 nonEmptyNonNSP  = WSIs (return (\ws -> isJust (W.stack ws) && W.tag ws /= "nsp"))
+#+END_SRC
 
+* Main
+This is the "main" of XMonad. This where everything in our configs comes together and works.
+
+#+BEGIN_SRC haskell
 main :: IO ()
 main = do
     -- Launching instances of xmobar on their monitors.
@@ -877,3 +1051,5 @@ main = do
                         , ppOrder  = \(ws:l:t:ex) -> [ws,l]++ex++[t]
                         }
         } `additionalKeysP` myKeys
+
+#+END_SRC
